Bug numbers refer to the BTS at http://pari.math.u-bordeaux.fr/Bugs/

Done for version 2.10.1 (released ??/??/2018):
  Fixed
      1- t_LIST corrupted on writebin / read [#2040]
BA    2- nfisincl() result uses wrong variable [#2041]

  Changed
      1- polcoeff is deprecated and renamed polcoef: it now only applies
         to scalars, polynomials, series and rational functions; no longer to
         vector/matrices or quadratic forms (use [] or "component").
      2- [libpari] rename polcoeff0 -> polcoef, polcoeff_i -> polcoef_i,
         truecoeff -> truecoef
      3- t_LIST corrupted on writebin / read [#2040]

  Added
      1- [libpari] denom_i, numer_i
BA    2- [libpari] Fp_pow_init, Flxq_pow_init, F2xq_pow_init
                   Fp_pow_table, Flxq_pow_table, F2xq_pow_table
                   gen_pow_init, gen_pow_table

Done for version 2.10.0 (released 15/05/2018):
  Fixed
      1- subst(1+x^3+O(x^6),x,x+O(x^4)) -> SEGV [#1865]
BA    2- lfunartin was using too much stack
BA    3- fflog in char 3 or 5 was slower than intended
      4- RgX_blocks only worked for t_INT or t_POL coeffs
      5- spurious bnrdlisclist entries (with negative number of real
         places...) when modulus not a conductor
BA    6- modular algorithms could fail for very large input
BA    7- [mingw] writebin did not work
BA    8- forprime(N=2^100,oo,...) did not work
      9- mseval(W,s,p) did not check 'p' in weight 2
     10- matrixqz(m, -1 or -2) was very slow
     11- ZG_normalize destroyed its input
     12- [install] prototype code D0,U, did not work
BA   13- use of complex default function argument could lead to stack error.
     14- factorpadic(2*x^4+x^2,2,2) -> division by 0 [#1876]
     15- incgam(110, I) very inaccurate
BA   16- ellinit over number field was not compatible with generic operations.
BA   17- [breakloop] dbg_up could confuse the breakloop.
HC   18- sumnummonieninit(,,a) + sumnummonien(n = a, ...) with a > 1 gave wrong
         result