@@ -413,9 +413,11 @@ Mod(0, 2)
 x^4 + 2*y*x^2 + y^2
 x^20 - 10*x^16 + 20*x^15 + 40*x^12 + 2600*x^11 + 150*x^10 - 80*x^8 + 12400*x
 ^7 - 17000*x^6 + 500*x^5 + 80*x^4 + 5600*x^3 + 11000*x^2 + 5000*x + 593
+[[x^2 + 3*x + 3, Mod(1, x^2 + 3*x + 3), Mod(x + 1, x^2 + 3*x + 3), -1]]
+[[x + 1, Mod(1, x + 1), Mod(0, x + 1), -1]]
 z^2
 Mod(2, 3)
 Mod(41170744616631889845480363679839550251, 17014118346046923173168730371588
 4105727)
 Mod(1, 3)*z^3*y^3
-Total time spent: 3480
+Total time spent: 6084
