@@ -81,6 +81,8 @@ polresultantext(x+1, x^2)
 polresultant(1+x*z^2,1+y*z^4,z)
 
 polcompositum(x^5-5,x^4-2,2)
+polcompositum(x-1, x^2+x+1, 1)
+polcompositum(x-1, x, 1)
 
 polresultant(x^2+1,z,x)
 
